# ytsum

./: .gitignore  README.md  docker-compose.yml  dockerfile  pyproject.toml  requirements.txt
summ/: __init__.py  auth.py  db.py  llm.py  schema.sql  summary.py
summ/templates/: base.html
summ/templates/auth/: login.html  register.html
summ/templates/summary/: create.html  detail.html  favorites.html  index.html  update.html
tests/: conftest.py  data.sql  summary-tests.py  test_auth.py  test_db.py  test_factory.py  test_llm.py  test_summ.py
