[project]
name = "summ"
version = "1.0.0"
description = "YT summary app using language models"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "blinker==1.9.0",
    "certifi==2024.12.14",
    "charset-normalizer==3.4.0",
    "click==8.1.7",
    "defusedxml==0.7.1",
    "Flask==3.1.0",
    "huggingface-hub==0.26.5",
    "itsdangerous==2.2.0",
    "Jinja2==3.1.4",
    "MarkupSafe==3.0.2",
    "requests==2.32.3",
    "tokenizers==0.21.0",
    "torch==2.5.1",
    "transformers==4.47.0",
    "typing_extensions==4.12.2",
    "Werkzeug==3.1.3",
    "youtube-transcript-api==0.6.3",
]

[project.optional-dependencies]
dev = [
    "coverage==7.6.9",
    "pytest==8.3.4",
    "pytest-mock==3.14.0",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "summ"
version = "1.0.0"
description = "YT summary app using language models"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.12"
# Main dependencies defined in dependencies section above

[tool.poetry.group.dev.dependencies]
# Development dependencies defined in optional-dependencies section above

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["summ"]